-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.0
-
98b8894856dd7359ebfe1075962ce770b5d110e0 (qt/qt3d/5.14)
-
QDoc Sprint 5
For example all properties of SpotLight, DirectionalLight, PointLight, EnvironmentLight are basically parameters passed straight to the material shaders and they don't have any function of their own. There are other classes as well that are only used like this.
Currently they are all documented as something like "Holds a value" which is correct, but these all could say that the exact meaning and use of these properties are up to the material implementation.
For Gerrit Dashboard: QTBUG-73095 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
283940,2 | Doc: Add note about implementation specific property meaning | 5.14 | qt/qt3d | Status: MERGED | +2 | 0 |