Doc: Add note about implementation specific property meaning

Fixes: QTBUG-73095
Change-Id: I843b0376ed0e4ece6ef949acb596a0303aac977d
Reviewed-by: Andy Shaw <andy.shaw@qt.io>