src/render/lights/qpointlight.cpp
@@ -135,12 +135,18 @@ QPointLight::QPointLight(QPointLightPrivate &dd, QNode *parent)
 
 /*!
   \qmlproperty float Qt3D.Render::PointLight::constantAttenuation
-    Specifies the constant attenuation of the point light
+    Specifies the constant attenuation of the point light.
+
+    \note The exact meaning and use of this property is up to the
+          material implementation.
 */
 
 /*!
   \property Qt3DRender::QPointLight::constantAttenuation
-    Specifies the constant attenuation of the point light
+    Specifies the constant attenuation of the point light.
+
+    \note The exact meaning and use of this property is up to the
+          material implementation.
  */
 float QPointLight::constantAttenuation() const
 {
@@ -159,12 +165,18 @@ void QPointLight::setConstantAttenuation(float value)
 
 /*!
   \qmlproperty float Qt3D.Render::PointLight::linearAttenuation
-    Specifies the linear attenuation of the point light
+    Specifies the linear attenuation of the point light.
+
+    \note The exact meaning and use of this property is up to the
+          material implementation.
 */
 
 /*!
   \property Qt3DRender::QPointLight::linearAttenuation
-    Specifies the linear attenuation of the point light
+    Specifies the linear attenuation of the point light.
+
+    \note The exact meaning and use of this property is up to the
+          material implementation.
  */
 float QPointLight::linearAttenuation() const
 {
@@ -183,12 +195,18 @@ void QPointLight::setLinearAttenuation(float value)
 
 /*!
   \qmlproperty float Qt3D.Render::PointLight::quadraticAttenuation
-    Specifies the quadratic attenuation of the point light
+    Specifies the quadratic attenuation of the point light.
+
+    \note The exact meaning and use of this property is up to the
+          material implementation.
 */
 
 /*!
   \property Qt3DRender::QPointLight::quadraticAttenuation
-    Specifies the quadratic attenuation of the point light
+    Specifies the quadratic attenuation of the point light.
+
+    \note The exact meaning and use of this property is up to the
+          material implementation.
  */
 float QPointLight::quadraticAttenuation() const
 {
